# exercise

./: .gitignore  .replit  CONTRIBUTING-en.md  CONTRIBUTING.md  Cargo.toml  README-en.md  README.md  USER_FUIDE-en.md  USER_GUIDE.md  replit.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  rustfmt.yml
data/: graph.txt  string.txt
src/: README.md  board.rs  config.json  game.rs  gen.cpp  graph.rs  lib.rs  main.rs  map.json  plots.rs
