[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "GPL-3.0"
repository = "https://github.com/Amazingkenneth/exercise"

[dependencies]
cursive-aligned-view = "0"
cursive-tabs = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# hyper = { version = "0", features = ["full"] }
# cxx = "1"

# [build-dependencies]
# cxx-build = "1"

[dependencies.cursive]
version = "0"
default-features = false
features = ["crossterm-backend"]